--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,10 @@ body.active {
     z-index: -1
 }
 .no-js #experience-timeline > div {
-    background: #fff;
+    background: #ffffff;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #dcd9d9
+    border: 1px solid #ffffff
 }
 .no-js #experience-timeline > div h3 {
     font-size: 1.5em;
@@ -34,7 +34,7 @@ body.active {
 .no-js #experience-timeline > div h4 {
     font-size: 1.2em;
     font-weight: 300;
-    color: #7e8890;
+    color: #907e7e;
     margin: 0 0 15px
 }
 .no-js #experience-timeline > div p {
@@ -66,6 +66,9 @@ header {
     animation-timing-function: ease;
     animation-duration: 0.75s
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu tausta = header ul
+*/
 header ul {
     display: inline-block;
     background: #fff;
@@ -78,6 +81,9 @@ header ul {
 header li {
     display: inline-block
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu teksti = header a
+*/
 header a {
     display: block;
     color: #3498db;
@@ -140,6 +146,9 @@ footer {
 .copyright {
     padding-top: 20px
 }
+/*!
+    copyright teksti = copyright p
+*/
 .copyright p {
     margin: 0;
     color: #74808a
@@ -147,6 +156,9 @@ footer {
 .top {
     text-align: center
 }
+/*!
+    ylös nappi/nuoli = top span
+*/
 .top span {
     cursor: pointer;
     display: block;
@@ -157,6 +169,9 @@ footer {
     border: 3px solid #b9bfc4;
     text-align: center
 }
+/*!
+    ylös nappi/nuoli nuoli icon = top i
+*/
 .top i {
     color: #74808a
 }
@@ -172,11 +187,17 @@ footer {
     font-size: 1.25em;
     list-style: none
 }
+/*!
+    some iconi = social a
+*/
 .social a {
     display: block;
     color: #74808a;
     padding: 10px
 }
+/*!
+    some hoveraus väri = social a:hover
+*/
 .social a:hover {
     color: #3498db
 }
