--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
     that don't come from third party libraries. This file gets compiled using
     Gulp and send to the /css folder which is then loaded on the page.
 */
+/*!
+    teksti = body
+*/
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px
@@ -54,6 +57,9 @@ body.active {
         transform: translateY(0)
     }
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu animaatio = header
+*/
 header {
     position: absolute;
     top: 0;
@@ -78,6 +84,9 @@ header ul {
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu "tyyli" = header li
+*/
 header li {
     display: inline-block
 }
@@ -89,12 +98,18 @@ header a {
     color: #3498db;
     padding: 10px
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu hover = header a:hover 
+*/
 header a:hover {
     color: #217dbb;
     text-decoration: none;
-    background: #eee;
+    background: #eee(255, 0, 0);
     border-radius: 4px
 }
+/*!
+    about/experience/education/projects/skills/contact valikko ruutu teksti klikkaus = header a:focus
+*/
 header a:focus {
     color: #3498db;
     text-decoration: none
